k8s/server.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server-good
  namespace: schlep
  labels:
    app: schlep
    role: server
    flavor: good
spec:
  replicas: 2
  selector:
    matchLabels:
      app: schlep
      role: server
      flavor: good
  template:
    metadata:
      labels:
        app: schlep
        role: server
        flavor: good
    spec:
      containers:
        - name: main
          image: ghcr.io/olix0r/schlep:v0.3.2
          args:
            - server
            - --config=/good.json
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /good.json
              subPath: good.json
      volumes:
        - name: config
          configMap:
            name: server
            items:
              - key: good.json
                path: good.json
...
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server-evil
  namespace: schlep
  labels:
    app: schlep
    role: server
    flavor: evil
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schlep
      role: server
      flavor: evil
  template:
    metadata:
      labels:
        app: schlep
        role: server
        flavor: evil
    spec:
      containers:
        - name: main
          image: ghcr.io/olix0r/schlep:v0.3.2
          args:
            - server
            - --config=/evil.json
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /evil.json
              subPath: evil.json
      volumes:
        - name: config
          configMap:
            name: server
            items:
              - key: evil.json
                path: evil.json
...
---
kind: Service
apiVersion: v1
metadata:
  name: schlep
  namespace: schlep
  labels:
    app: schlep
    role: server
spec:
  type: LoadBalancer
  selector:
    app: schlep
    role: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
...
