k8s/route.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: schlep-default
  namespace: schlep
  annotations:
    retry.linkerd.io/http: 5xx
    retry.linkerd.io/limit: "2"
    retry.linkerd.io/timeout: 500ms
    # timeout.linkerd.io/stream: 850ms
spec:
  parentRefs:
    - name: schlep
      kind: Service
      group: core
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
...
